--- a/css/style.css
+++ b/css/style.css
@@ -408,16 +408,31 @@ header {
   margin-bottom: 45px;
 
 }
-.choice-city__rostov {
-  margin-right: 60.5px;
+.choice-city > span:hover {
+  /*margin-right: 60.5px;*/
   padding-bottom: 6.68px;
   border-bottom: 1px solid var(--color-golden);
+  cursor: pointer;
+}
+.choice-city {
+  padding-bottom: 6.68px;
+  margin-right: 60.5px;
 }
 
-.choice-city__rostov > span {
+.choice-city > span {
+  font-family: "Yeseva One", serif;
+  text-transform: uppercase;
   font-size: 14px;
   line-height: 19px;
   cursor: pointer;
+  color: rgba(255, 255, 255, 0.3);
+}
+.choice-city-active > span {
+  border-bottom: 1px solid var(--color-golden);
+  font-family: "Yeseva One", serif;
+  text-transform: uppercase;
+  color: var(--color-golden);
+  padding-bottom: 6.68px;
 }
 
 .choice-city__sochi {
